--- a/redis5/redis_template.conf
+++ b/redis5/redis_template.conf
@@ -250,7 +250,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
-dbfilename {{dest_dir}}dump_{{port}}.rdb
+dbfilename dump_{{port}}.rdb
 
 # The working directory.
 #
@@ -505,7 +505,7 @@ replica-priority 100
 # use a very strong password otherwise it will be very easy to break.
 #
 # requirepass foobared
-
+{{pass|default("")}}
 # Command renaming.
 #
 # It is possible to change the name of dangerous commands in a shared
